--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="menu container">
             <input type="checkbox" id="menu" />
             <label for="menu">
-                <img src="ImagenesRR/Logo.svg" class="menu-icono" alt="Rolls Royce">
+                <img src="Logo.svg" class="menu-icono" alt="Rolls Royce">
             </label>
 
         </div>
@@ -42,7 +42,7 @@
             <div class="modelos-group">
 
                 <div class="modelo-1">
-                    <img src="ImagenesRR/phantom-removebg-preview.png" alt="">
+                    <img src="phantom-removebg-preview.png" alt="">
                     <h3>Phantom</h3>
                     <p>
                         El Rolls-Royce Phantom, lanzado en 2003, personifica el pináculo del lujo automotriz con su
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="modelo-2">
-                    <img src="ImagenesRR/Ghost.png" alt="">
+                    <img src="Ghost.png" alt="">
                     <h3>Ghost</h3>
                     <p>
                         El Rolls-Royce Ghost, revelado en 2009, es un sedán de lujo que encarna la elegancia
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="modelo-3">
-                    <img src="ImagenesRR/2021-rolls-royce-cullinan-index.webp" alt="">
+                    <img src="2021-rolls-royce-cullinan-index.webp" alt="">
                     <h3>Cullinan</h3>
                     <p>
                         El Rolls-Royce Cullinan, presentado en mayo de 2018, es un SUV de lujo de tamaño completo que
@@ -88,17 +88,17 @@
             <div class="espiritu-group">
 
                 <div class="espiritu-1">
-                    <img src="ImagenesRR/ELEGANCIA.svg" alt="">
+                    <img src="ELEGANCIA.svg" alt="">
                     <h3>Elegancia</h3>
                 </div>
 
                 <div class="espiritu-2">
-                    <img src="ImagenesRR/LIBERTAD.svg" alt="">
+                    <img src="LIBERTAD.svg" alt="">
                     <h3>Libertad</h3>
                 </div>
 
                 <div class="espiritu-3">
-                    <img src="ImagenesRR/PROGRESO.svg" alt="">
+                    <img src="PROGRESO.svg" alt="">
                     <h3>Progreso</h3>
                 </div>
 
@@ -159,7 +159,7 @@
         </p>
         <div class="blog-content">
             <div class="blog-1">
-                <img src="ImagenesRR/16271053313614.jpg" alt="">
+                <img src="16271053313614.jpg" alt="">
                 <h3>Blog 1</h3>
                 <p>
                     Hace poco supimos del regalo de navidad (o consuelo) que le hizo Georgina Rodríguez a Cristiano
@@ -172,7 +172,7 @@
                 </p>
             </div>
             <div class="blog-2">
-                <img src="ImagenesRR/2-1.jpg" alt="">
+                <img src="2-1.jpg" alt="">
                 <h3>Blog 2</h3>
                 <p>
                     También es importante resaltar que son personalizables: cada comprador puede escoger la pintura,
@@ -185,7 +185,7 @@
                 </p>
             </div>
             <div class="blog-3">
-                <img src="ImagenesRR/screenshot_73.jpg_1717874104.jpg" alt="">
+                <img src="screenshot_73.jpg_1717874104.jpg" alt="">
                 <h3>Blog 3</h3>
                 <p>
                     Rolls-Royce se encuentra entre las marcas más aclamadas por las celebridades. Considerada la firma
